--- a/css/main.scss
+++ b/css/main.scss
@@ -33,6 +33,7 @@ body {
       background: #FFFFFF;
       border-radius: 15px;
       padding: 70px;
+      box-shadow: 7px 25px 23px -20px  rgba( #FF7979 , .2);
       .swiper-container{
          .swiper-slide{
             cursor: pointer;
@@ -88,6 +89,7 @@ body {
          border-radius: 15px;
          padding: 30px;
          margin-bottom: 5px;
+         box-shadow: 7px 25px 23px -20px  rgba( #FF7979 , .2);
 
          h5{
             font-family: IBM Plex Sans;
@@ -156,6 +158,9 @@ body {
       border-radius: 15px;
       padding:70px;
       margin-bottom: 50px;
+      
+      box-shadow: 7px 25px 23px -20px  rgba( #FF7979 , .2);
+
       .user-info-container{
          display: flex;
          align-items: center;
@@ -221,7 +226,60 @@ body {
    }
 
 
-   
+   &--blog-post-popup{
+      width: 564px;
+      height: 345px;
+      background: linear-gradient(247.15deg, #FF5C00 0%, #FF9950 103.74%);
+      border-radius: 15px;
+      padding: 70px 85px 60px 70px;
+
+      box-shadow: 7px 25px 23px -20px  rgba(#FF7979 , .4);
+
+      h5{
+         font-family: Merriweather;
+         font-style: normal;
+         font-weight: 900;
+         font-size: 30px;
+         line-height: 40px;
+         color: #FFFFFF;
+         max-width: 400px;
+         margin-bottom: 85px;
+      }
+
+      .user-info-container{
+         display: flex;
+         align-items: center;
+         margin-bottom: 50px;
+
+         img{
+            width: 51px;
+            height: 51px;
+            border-radius: 51px;
+            margin-right: 15px;
+         }
+         .user-info{
+            h4{
+               font-family: IBM Plex Sans;
+               font-style: normal;
+               font-weight: bold;
+               font-size: 16px;
+               line-height: 21px; 
+               color: #fff;
+               margin-bottom: 5px;
+            }
+
+            h6{
+               font-family: IBM Plex Sans;
+               font-style: normal;
+               font-weight: normal;
+               font-size: 14px;
+               line-height: 18px; 
+               color: #fff;
+            }
+         }
+      }
+
+   }
 }
 
 
